--- a/rhymecity/src/main/res/values/strings.xml
+++ b/rhymecity/src/main/res/values/strings.xml
@@ -754,6 +754,8 @@
 
     <string name="book_flight_infant">Infant</string>
     <string name="book_flight_infant_year">1-23 months</string>
+        <string name="looking">Im looking for..</string>
+
 
 
 </resources>
